# ml_ops_project

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/ci/ci/: cd-cd.yaml
backend/: Dockerfile  app.py  myproject.toml
backend/notebooks/: ali-gasimov-fe1.ipynb  ali-gasimov-trainmodel.ipynb
backend/src/models/: train_model.py
frontend/: Dockerfile  app.py  myproject.toml
models/: model.pkl
notebooks/: ali-gasimov-eda.ipynb  ali-gasimov-fe1.ipynb  ali-gasimov-fe2.ipynb  ali-gasimov-trainmodel.ipynb
src/models/: predict_model.py  train_model.py
